# ClickShield

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml  ci.yml
clickshield/: __init__.py  __main__.py
clickshield/config/: defaults.py  settings.py
clickshield/core/: analyzer.py  capture.py  history.py  monitor.py  scoring.py
clickshield/resources/icons/: generate_icons.py
clickshield/resources/prompts/: scam_analysis.txt
clickshield/ui/: blocking_overlay.py  dashboard.py  overlay_dialog.py  setup_wizard.py  toast.py  tray.py
clickshield/utils/: audio.py  autostart.py  keystore.py  logger.py
installer/: build.ps1  clickshield.spec  setup.iss
tests/: test_analyzer.py  test_scoring.py
